<resources>
    <string name="app_name">Music</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Music</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <!--navigationView-->
    <string name="nghe_ngay">Nghệ sĩ</string>
    <string name="thuviennhac">Album</string>
    <string name="bai_hat">Bài hát</string>
    <string name="danh_sach_nhac">Danh sách nhạc</string>
    <string name="setting">Cài đặt</string>
    <string name="trogiup">Trợ giúp và phản hồi</string>
    <string name="artists">Artists</string>
    <string name="album">Album</string>
    <string name="songs">Songs</string>
    <string name="playlist">Playlists</string>
    <string name="permission_isnt_granted">Permission is not granted</string>
    <string name="dont_granted_and_dont_show_dialog_again">Permisson donot granted and dont show dialog again</string>
    <string name="read_is_granted">Permision Read File is Granted</string>
    <string name="read_is_deied">Permision Read File is Denied</string>
    <string name="write_is_granted">Permision Write File is Granted</string>
    <string name="write_is_deied">Permision Write File is Denied</string>
    <!--object Song-->
    <string name="name_song">Tên bài hát</string>
    <string name="name_singer">Tên sa sĩ</string>
    <string name="name_album">Ten Album</string>
    <string name="count_album">0 Album</string>
    <string name="count_song">0 Bài hát</string>
    <!--layout nghe ngay-->
    <string name="hoat_dong_gan_day">Hoạt động gần đây</string>
    <string name="note_hoat_dong">Đã phát hoặc đã thêm gần đây</string>
    <string name="loop_song_off">Tắt lặp lại</string>
    <string name="loop_song_alllist">Lặp lại tất cả bài hát</string>
    <string name="loop_song_present">Lặp lại bài hát hiện tại</string>
    <string name="off_random_play">Tắt tính năng phát ngẫu nhiên</string>
    <string name="on_random_play">Bật tính năng phát ngẫu nhiên</string>
    <string name="thongbao">Phần nghệ sĩ đang hoàn thiện. Mời bạn đến tab nghe nhạc</string>
    <string name="phat_ngau_nhien">Phát ngẫu nhiên tất cả</string>
    <string name="click_phat_ngau_nhien">Đang hoàn thiện anh có thể chọn tính nắng này trong SlidingLayoput</string>
    <!--notification-->
    <string name="channel_name">play music</string>
    <string name="channel_description">choi nhac</string>
</resources>
